--- a/eAppointmentClient/src/index.html
+++ b/eAppointmentClient/src/index.html
@@ -11,6 +11,7 @@
 <body class="container">
   <app-root></app-root>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" referrerpolicy="no-referrer"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://kit.fontawesome.com/dc59d75dac.js" crossorigin="anonymous"></script>
 </body>
